2006-04-28  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c: Use xfixed_16_16_t
	instead of XFixed to avoid 64bit issue with XFixed being defined as
	"int".

	* configure.ac: xrender 0.8.4 is good enough.

2006-04-27  Dan Winship  <danw@novell.com>

	* plugins/rotate.c (rotateHandleEvent): for the
	rotate-to-specific-face keys, rotate counterclockwise when that's
	faster. (bnc 169427)

	* plugins/scale.c (scaleHandleEvent): Make the corners toggle
	scale mode rather than only activating it. (bnc 169408)

2006-04-27  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.10.

	* plugins/decoration.c: Remove debug variable.

	* src/window.c (addWindow): Check if window is minimized. (Dan Winship)

	* plugins/compiz.schemas: Regen (snapoff and maximize_effect).

	* plugins/wobbly.c: Add maximize effect.

	* plugins/zoom.c:
	* plugins/water.c:
	* plugins/rotate.c:
	* plugins/resize.c:
	* plugins/move.c:
	* src/event.c:
	* src/screen.c:
	* src/display.c:
	* include/compiz.h: Add proper warp pointer interface and update
	all plugins to use it.

2006-04-26  Dan Winship  <danw@novell.com>

	* src/event.c (handleEvent): activate window on Button2 click in
	addition to Button1 and Button3.

	* plugins/gconf.c (gconfSetOption): gconf_value_compare against
	the old value for list-type options too.
	(gconfInitOption): Change the call to gconf_client_get_entry to
	request the default value again; the fix to gconfSetOption will
	prevent the infinite loops that happened before.

2006-04-26  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (update_shadow): 
	Remove comment that is no longer valid.

	* plugins/move.c: Support for maximized windows snap-off. Based on
	patch by Colin Guthrie.

	* plugins/rotate.c (rotateHandleEvent): Don't do edge flipping
	when a horizontally maximized or fullscreen window is grabbed.

	* plugins/zoom.c:
	* plugins/rotate.c:
	* plugins/resize.c: