@@ -1,5 +1,9 @@
 2006-04-28  David Reveman  <davidr@novell.com>
 
+	* plugins/decoration.c (decorInitWindow): Check for window specific
+	decoration on both mapped and unmapped windows so that initially
+	minimized windows get properly decorated. (Dan Winship)
+
 	* gnome/window-decorator/gnome-window-decorator.c: Use xfixed_16_16_t
 	instead of XFixed to avoid 64bit issue with XFixed being defined as
 	"int".
